add main classes
add App.java
add Human.java
add README.md