@@ -1,2 +1,10 @@
-# AstonConsoleApp
+## AstonConsoleApp
 A console application for demonstrating the transition from LinkedList to RBT in hashmap
+
+### Commands
+```java
+java --add-opens java.base/java.util=ALL-UNNAMED -jar app-all.jar
+```
+### Application usage example:
+
+[![asciicast](https://asciinema.org/a/b1droOWBLKuyIMOiI0PYJpo2J.svg)](https://asciinema.org/a/b1droOWBLKuyIMOiI0PYJpo2J)
